--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -34,9 +34,9 @@ jobs:
       run: |
         cd docs && make html
 
-    # - name: Deploy
-    #   if: github.ref == 'refs/heads/main'
-    #   uses: JamesIves/github-pages-deploy-action@4.1.5
-    #   with:
-    #     branch: gh-pages # The branch the action should deploy to.
-    #     folder: docs/_build/html # The folder the action should deploy.
+    - name: Deploy
+      if: github.ref == 'refs/heads/main'
+      uses: JamesIves/github-pages-deploy-action@4.1.5
+      with:
+        branch: gh-pages # The branch the action should deploy to.
+        folder: docs/_build/html # The folder the action should deploy.
