--- a/.gitignore
+++ b/.gitignore
@@ -20,4 +20,5 @@ project_name.egg-info/
 /mywork/Gaussian Benchmark/*
 !/mywork/Gaussian Benchmark/*.py
 !/mywork/Gaussian Benchmark/*.ipynb
+!/mywork/Gaussian Benchmark/*.sh
 ProxNest.egg-info/*
