--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,6 @@ project_name.egg-info/
 !/mywork/Gaussian Benchmark/*.ipynb
 !/mywork/Gaussian Benchmark/*.sh
 ProxNest.egg-info/*
+
+mywork/Gaussian_Benchmark/*
+!mywork/Gaussian_Benchmark/*.*
